// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`factory#create should throw error if one of two reducers is false 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 false
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`factory#create should throw error if reducer is empty string 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 ''
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`factory#create should throw error if reducer is false 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 false
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`factory#create should throw error if reducer is non-empty string with no matching reducer 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 'asdf'
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`factory#create should throw error if reducer is undefined 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 undefined
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`factory#create should throw error if reducer is zero 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
 0
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;
